--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 	
 <header></header>
 <section>
+	<h1>Search for Youtube Videos</h1>
+	
+	
 	<form id="search-term">
-	<input id="query">
+		<input id="query">
 	</form>
+	
+	
 	<div id="search-results"></div>
 	
 </section>
